@@ -1,6 +1,7 @@
 0.08
  - Fix Changelog file.
  - Fix Makefile.PL and use lib.
+ - Improve LICENSE AND COPYRIGHT section in doc.
  - Improve SYNOPSIS section in doc.
  - Rename examples to better names.
  - Update Module::Install to 1.21 version.
